Fix. Auth Footer
- It overlapped with the auth form in mobile.

--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -25,7 +25,7 @@
 .content__container {
   width: 100%;
   max-width: 350px;
-  height: 450px;
+  height: 500px;
   padding: 10px 10px;
   display: flex;
   flex-direction: column;
@@ -114,9 +114,10 @@
   height: fit-content;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 10px;
+  flex: 1;
 }
 
 .auth-buttons {
